@@ -26,6 +26,12 @@
 using namespace std;
 
 
+// Define round() function for older MSVC compilers
+#if defined _MSC_VER && _MSC_VER<1900
+inline double round(double r) { return (r > 0.0) ? floor(r + 0.5) : ceil(r - 0.5); }
+#endif
+
+
 // Minimum buffer size for output data
 #define MX 65536
 
