@@ -1,3 +1,7 @@
+03/02/2021:
+	- Added round() definition to JPEGCompressor.cc to allow MSVC compilation: https://github.com/ruven/iipsrv/issues/205
+
+
 27/06/2020:
 	- Trailing query suffixes using the ? character are now stripped off the IIIF quality/format string.
 	  Fixes: https://github.com/ruven/iipsrv/issues/145
